# resp_ep

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: Makefile
docs/source/: api.rst  conf.py
examples/: 2_methylpropanal_3.xyz  2_methylpropanal_5.xyz  2_methylpropanal_stage_1.ini  2_methylpropanal_stage_2.ini  dmso_opt_c1.py  dmso_opt_c1_a.ini  dmso_opt_c1_b.ini  dmso_opt_c1_b.py  methanol.ini  methanol.py  methanol.xyz  molecules.py  phosphate.ini  phosphate.xyz  run_all_molecules.py
examples/1_bromobutane/: 1_bromobutane_conf1-psi.out  1_bromobutane_conf1.xyz  resp_ep.ipynb  stage_1.ini  stage_1.out  stage_1_x.ini  stage_1_x.out  stage_2.ini  stage_2.out  stage_2_x.ini  stage_2_x.out
examples/2_methylpropanal/: 2_methylpropanal_1.xyz  2_methylpropanal_2.xyz  2_methylpropanal_4.xyz  2_methylpropanal_6.xyz  resp_ep_stage_2.py  stage_1.ini  stage_2.ini
examples/acetic_acid/: acetic_acid-psi.out  acetic_acid_x.xyz  add_ep.ipynb  resp_ep_stage_1.py  stage_1.ini  stage_1.out  stage_1_x.ini  stage_1_x.out  stage_2.ini  stage_2.out  stage_2_x.ini  stage_2_x.out
examples/adding_extra_points/: acetaldehyde.xyz  acetaldehyde_x.xyz  add_ep.ipynb  add_ep_examples.ipynb  methanol_x.xyz  methylbromine.xyz  methylbromine_x.xyz
examples/dmso/: dmso.xyz  resp_ep_stage_1.py  stage_1_a.ini  stage_1_b.ini
examples/multiple_orientations/: acetic_acid.xyz  acetic_acid_a-psi.out  acetic_acid_a.xyz  acetic_acid_b-psi.out  acetic_acid_b.xyz  stage_1.ini  (+15 more)
resp_ep/: driver.py  espfit.py  extras.py  vdw_surface.py
tests/: test_resp_ep.py
(+152 files in other folders)
